--- a/tsne_feature.ipynb
+++ b/tsne_feature.ipynb
@@ -1025,6 +1025,215 @@
     "plt.savefig(save_path, dpi=300)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "05923c89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py\n",
+    "import os\n",
+    "import pickle\n",
+    "import yaml\n",
+    "from pathlib import Path\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import torch\n",
+    "from transformers import AutoModel\n",
+    "\n",
+    "from TITAN.titan.utils import get_eval_metrics, TEMPLATES, bootstrap\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "88fda385",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = AutoModel.from_pretrained('MahmoodLab/TITAN', trust_remote_code=True)\n",
+    "model = model.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9e9b4c1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load example data\n",
+    "from huggingface_hub import hf_hub_download\n",
+    "demo_h5_path = hf_hub_download(\n",
+    "    \"MahmoodLab/TITAN\", \n",
+    "    filename=\"TCGA_demo_features/TCGA-PC-A5DK-01Z-00-DX1.C2D3BC09-411F-46CF-811B-FDBA7C2A295B.h5\",\n",
+    ")\n",
+    "file = h5py.File(demo_h5_path, 'r')\n",
+    "features = torch.from_numpy(file['features'][:])\n",
+    "coords = torch.from_numpy(file['coords'][:])\n",
+    "patch_size_lv0 = file['coords'].attrs['patch_size_level0']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "74928cb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('TITAN/datasets/config_tcga-ot.yaml', 'r') as file:\n",
+    "    task_config = yaml.load(file, Loader=yaml.FullLoader)\n",
+    "class_prompts = task_config['prompts']\n",
+    "target = task_config['target']\n",
+    "label_dict = task_config['label_dict']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "24ab10cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mxz3935/anaconda3/envs/AA/lib/python3.10/site-packages/torch/amp/autocast_mode.py:265: UserWarning: User provided device_type of 'cuda', but CUDA is not available. Disabling\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# extract slide embedding\n",
+    "with torch.autocast('cuda', torch.float16), torch.inference_mode():\n",
+    "    features = features.to(device)\n",
+    "    coords = coords.to(device)\n",
+    "    slide_embedding = model.encode_slide_from_patch_features(features, coords, patch_size_lv0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c5b08886",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'items'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# create prompts for zero-shot classification\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m sorted_class_prompts \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m(\u001b[38;5;28msorted\u001b[39m(\u001b[43mclass_prompts\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitems\u001b[49m(), key\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mlambda\u001b[39;00m item: label_dict\u001b[38;5;241m.\u001b[39mget(item[\u001b[38;5;241m0\u001b[39m], \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minf\u001b[39m\u001b[38;5;124m'\u001b[39m))))\n\u001b[1;32m      3\u001b[0m classes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(sorted_class_prompts\u001b[38;5;241m.\u001b[39mkeys())\n\u001b[1;32m      4\u001b[0m class_prompts \u001b[38;5;241m=\u001b[39m [sorted_class_prompts[key] \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m sorted_class_prompts\u001b[38;5;241m.\u001b[39mkeys()]\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'items'"
+     ]
+    }
+   ],
+   "source": [
+    "# create prompts for zero-shot classification\n",
+    "sorted_class_prompts = dict(sorted(class_prompts.items(), key=lambda item: label_dict.get(item[0], float('inf'))))\n",
+    "classes = list(sorted_class_prompts.keys())\n",
+    "class_prompts = [sorted_class_prompts[key] for key in sorted_class_prompts.keys()]\n",
+    "with torch.autocast('cuda', torch.float16), torch.inference_mode():\n",
+    "    classifier = model.zero_shot_classifier(class_prompts, TEMPLATES, device=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "682ae581",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with torch.autocast('cuda', torch.float16), torch.inference_mode():\n",
+    "    scores = model.zero_shot(slide_embedding, classifier)\n",
+    "print(\"Predicted class:\", classes[scores.argmax()])\n",
+    "print(\"Normalized similarity scores:\", [f\"{c}: {score:.3f}\" for c, score in zip(classes, scores[0][0])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "fd80ee58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py\n",
+    "import torch\n",
+    "\n",
+    "from transformers import AutoModel\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6d679369",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load model\n",
+    "model = AutoModel.from_pretrained('MahmoodLab/TITAN', trust_remote_code=True)\n",
+    "model = model.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "cd8b04a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load data\n",
+    "from huggingface_hub import hf_hub_download\n",
+    "demo_h5_path = hf_hub_download(\n",
+    "    \"MahmoodLab/TITAN\", \n",
+    "    filename=\"TCGA_demo_features/TCGA-PC-A5DK-01Z-00-DX1.C2D3BC09-411F-46CF-811B-FDBA7C2A295B.h5\",\n",
+    ")\n",
+    "file = h5py.File(demo_h5_path, 'r')\n",
+    "features = torch.from_numpy(file['features'][:])\n",
+    "coords = torch.from_numpy(file['coords'][:])\n",
+    "patch_size_lv0 = file['coords'].attrs['patch_size_level0']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8466de32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extract slide embedding\n",
+    "with torch.autocast(device_type='cuda', dtype=torch.bfloat16), torch.inference_mode():\n",
+    "    features = features.to(device)\n",
+    "    coords = coords.to(device)\n",
+    "    slide_embedding = model.encode_slide_from_patch_features(features, coords, patch_size_lv0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a967094c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 768])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(slide_embedding.shape)"
+   ]
   }
  ],
  "metadata": {
