modify the tsne label location.

--- a/tsne_feature.ipynb
+++ b/tsne_feature.ipynb
@@ -790,7 +790,7 @@
     "plt.title(\"Patch-level t-SNE by TCGA Source\")\n",
     "plt.xlabel(\"t-SNE-1\")\n",
     "plt.ylabel(\"t-SNE-2\")\n",
-    "plt.legend(markerscale=2, bbox_to_anchor=(1.05, 1), loc='upper left', fontsize=8)\n",
+    "plt.legend(markerscale=2, loc='upper right', fontsize=8)\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
